typescript/checker/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandStringType.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            50,
        ),
        hi: BytePos(
            57,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandStringType.ts:4:5
  |
4 | var BOOLEAN: boolean;
  |     ^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            72,
        ),
        hi: BytePos(
            78,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandStringType.ts:5:5
  |
5 | var NUMBER: number;
  |     ^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            92,
        ),
        hi: BytePos(
            98,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandStringType.ts:6:5
  |
6 | var STRING: string;
  |     ^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            112,
        ),
        hi: BytePos(
            118,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandStringType.ts:7:5
  |
7 | var OBJECT: Object;
  |     ^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            133,
        ),
        hi: BytePos(
            147,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandStringType.ts:9:5
  |
9 | var resultIsString: string;
  |     ^^^^^^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            540,
        ),
        hi: BytePos(
            544,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandStringType.ts:27:11
   |
27 | ANY = new Date(), STRING;
   |           ^^^^

error: NoNewSignature {
    span: Span {
        lo: BytePos(
            636,
        ),
        hi: BytePos(
            642,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandStringType.ts:31:14
   |
31 | OBJECT = new Object, STRING + "string";
   |              ^^^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            878,
        ),
        hi: BytePos(
            887,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandStringType.ts:37:43
   |
37 | var resultIsString10 = (["a", "b"], NUMBER.toString());
   |                                           ^^^^^^^^^

